BE/ gpt socket connect