@@ -4,6 +4,7 @@ package com.aicoup.app.pipeline.gpt.converter;
 import com.aicoup.app.domain.entity.game.Game;
 import com.aicoup.app.domain.entity.game.GameData;
 import com.aicoup.app.domain.entity.game.card.CardInfo;
+import com.aicoup.app.domain.entity.game.history.History;
 import com.aicoup.app.domain.entity.game.member.GameMember;
 import com.aicoup.app.domain.redisRepository.GameMemberRepository;
 import com.aicoup.app.domain.redisRepository.GameRepository;
@@ -17,6 +18,7 @@ import org.springframework.stereotype.Component;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Component
 @RequiredArgsConstructor
@@ -26,7 +28,15 @@ public class GPTConverter {
     private final GameMemberRepository gameMemberRepository;
     private final CardInfoRepository cardInfoRepository;
 
-    public String run(String gameId) {
+    private final Map<Integer, String> actionCharacterMapper = new HashMap<>() {{
+        put(3, "duke");
+        put(4, "captain");
+        put(5, "assassin");
+        put(6, "ambassdor");
+        put(22, "contessa");
+    }};
+
+    public GameData run(String gameId) {
         GameData gameData = new GameData();
 
         Optional<Game> optionalGame = gameRepository.findById(gameId);
@@ -40,7 +50,7 @@ public class GPTConverter {
                     .map(gameMemberRepository::findById)
                     .filter(Optional::isPresent)
                     .map(Optional::get)
-                    .collect(Collectors.toList());
+                    .toList();
 
             Map<Integer, CardInfo> cardInfoMap = cardInfoRepository.findAll().stream()
                     .collect(Collectors.toMap(CardInfo::getId, Function.identity()));
@@ -57,15 +67,39 @@ public class GPTConverter {
                 gameData.setId(game.getId());
                 gameData.setCurrentPlayer(game.getWhoseTurn());
                 gameData.setPlayerNum(game.getMemberIds().size());
+
+                // 추가 정보
+                LinkedList<History> actionContext = game.getActionContext();
+                if (!actionContext.isEmpty()) {
+                    int size = actionContext.size();
+
+                    History last = actionContext.getLast();
+
+                    // 앞전 플레이에 대응하거나 의심
+                    if (size == 1) {
+                        gameData.setCurrentAction(cardInfoMap.get(last.getActionId()).getEnglishName());
+                        String targetMemberId = last.getPlayerTried();
+                        gameData.setTarget(targetMemberId == null ? "none" : String.valueOf(IntStream.range(0, members.size())
+                                .filter(i -> members.get(i).getId().equals(targetMemberId))
+                                .findFirst().getAsInt() + 1));
+                    } else if (size == 2) { // 앞전 플레이는 대응한 거라 거기에 의심
+                        gameData.setCounterAction(actionCharacterMapper.get(last.getActionId()));
+                        String targetMemberId = last.getPlayerTried();
+                        gameData.setCounterActioner(String.valueOf(IntStream.range(0, members.size())
+                                .filter(i -> members.get(i).getId().equals(targetMemberId))
+                                .findFirst().getAsInt() + 1));
+                    }
+                }
+
             } catch (JsonProcessingException e) {
                 e.printStackTrace();
             }
         }
 
-        return "";
+        return gameData;
     }
 
-    public static String serializeGameState(GPTGameState gameState) throws JsonProcessingException {
+    private static String serializeGameState(GPTGameState gameState) throws JsonProcessingException {
         ObjectMapper mapper = new ObjectMapper();
         ObjectNode rootNode = mapper.createObjectNode();
         ObjectNode playersNode = mapper.createObjectNode();
@@ -78,7 +112,7 @@ public class GPTConverter {
             playersNode.set(entry.getKey().toString(), playerNode);
         }
 
-        rootNode.setAll(playersNode); // Set all player nodes to the root node
+        rootNode.setAll(playersNode);
 
         return "[" + mapper.writerWithDefaultPrettyPrinter().writeValueAsString(rootNode) + "]";
     }
